--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
           - ./mysql-init.sql:/docker-entrypoint-initdb.d/init.sql:delegated
     environment:      
       - MYSQL_ROOT_PASSWORD=nmCsdkhj20n@Sa
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --lower_case_table_names=1
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --lower_case_table_names=1 --ssl=0
     ports:
       - 3306:3306
       
